create task 1 in class to scrap the data with in api

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -29,6 +29,42 @@
     "import os\n",
     "sys.path.append(os.path.abspath(os.path.join('..')))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scripts.telegram_scraper_task_1 import TelegramScraper\n",
+    "# Telegram API credentials\n",
+    "API_ID = 'YOUR_API_ID'  # Replace with your API ID\n",
+    "API_HASH = 'YOUR_API_HASH'  # Replace with your API HASH\n",
+    "PHONE_NUMBER = 'YOUR_PHONE_NUMBER'  # Replace with your phone number\n",
+    "\n",
+    "# Telegram channels to scrape\n",
+    "CHANNELS = [\n",
+    "    'https://t.me/DoctorsET',\n",
+    "    'https://t.me/Chemed',  # Replace with actual Chemed channel link\n",
+    "    'https://t.me/lobelia4cosmetics',\n",
+    "    'https://t.me/yetenaweg',\n",
+    "    'https://t.me/EAHCI'\n",
+    "]\n",
+    "\n",
+    "# Initialize the scraper\n",
+    "scraper = TelegramScraper(api_id=API_ID, api_hash=API_HASH, phone_number=PHONE_NUMBER, channels=CHANNELS)\n",
+    "\n",
+    "# Start scraping\n",
+    "import asyncio\n",
+    "asyncio.run(scraper.start_scraping())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
