initialize task 2 DataCleaner class in notebooks analysis.ipynb

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -64,7 +64,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scripts.task_2_data_cleaner import DataCleaner\n",
+    "\n",
+    "# Initialize the data cleaner\n",
+    "cleaner = DataCleaner(db_name='telegram_data.db')\n",
+    "\n",
+    "# Run the data cleaning pipeline\n",
+    "cleaner.clean_data()"
+   ]
   }
  ],
  "metadata": {
