create task-3 yolo object detection class for image

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -73,6 +73,25 @@
     "# Run the data cleaning pipeline\n",
     "cleaner.clean_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scripts.task_3_yolo_detector import YOLOObjectDetector\n",
+    "detector = YOLOObjectDetector()\n",
+    "detector.detect_objects(\"example.jpg\")\n",
+    "detector.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
