create task-4 class detection schema for fast api

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -91,7 +91,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scripts.task_4_detection_schema import app\n",
+    "import uvicorn\n",
+    "uvicorn.run(app, host=\"0.0.0.0\", port=8000)"
+   ]
   }
  ],
  "metadata": {
